# serializer version: 1
# name: TestCommandOutputs.test_check_output_snapshot
  '''
  Usage: polylogue check [OPTIONS]
  
    Health check with optional repair.
  
  Options:
    --json                          Output as JSON
    -v, --verbose                   Show breakdown by provider
    --repair                        Attempt to repair detected issues
    --preview                       Preview repairs without executing (requires
                                    --repair)
    --vacuum                        Reclaim unused space after repair (requires
                                    --repair)
    --deep                          Run SQLite integrity check (slow on large
                                    databases)
    --runtime                       Run environment and runtime verification
                                    checks
    --schemas                       Run raw-corpus schema verification (non-
                                    mutating)
    --schema-provider TEXT          Limit schema verification to DB provider
                                    name (repeatable)
    --schema-samples TEXT           Validation samples per raw payload: positive
                                    integer or 'all'  [default: all]
    --schema-record-limit INTEGER   Limit schema verification to N raw records
                                    (for chunked runs)
    --schema-record-offset INTEGER  Start offset for chunked schema verification
                                    [default: 0]
    --schema-quarantine-malformed   Mark malformed raw payloads as failed
                                    validation during schema verification
                                    (mutates DB)
    -h, --help                      Show this message and exit.
  '''
# ---
# name: TestCommandOutputs.test_run_help_output_snapshot
  '''
  Usage: polylogue run [OPTIONS]
  
    Run pipeline stages on configured sources.
  
  Options:
    --preview                       Preview work without writing
    --stage [acquire|validate|parse|render|index|generate-schemas|all]
                                    Pipeline stage: acquire (store raw),
                                    validate (schema check raw payloads), parse
                                    (extract conversations), render (output),
                                    index (search), generate-schemas, or all
                                    [default: all]
    --source TEXT                   Limit to source name (repeatable). 'last' =
                                    previously synced source. List with:
                                    polylogue sources
    --format [markdown|html]        Output format for rendering (markdown or
                                    html)  [default: html]
    --watch                         Watch sources for changes and run
                                    continuously
    --notify                        Desktop notification on new conversations
                                    (requires --watch)
    --exec TEXT                     Execute command on new conversations
                                    (requires --watch)
    --webhook TEXT                  Call webhook URL on new conversations
                                    (requires --watch)
    --reparse                       Force re-parsing of all raw conversations
                                    (clears parse tracking)
    -h, --help                      Show this message and exit.
  '''
# ---
# name: TestCommandOutputs.test_sources_output_snapshot
  '''
  Usage: polylogue sources [OPTIONS]
  
    List configured sources.
  
  Options:
    --json      Output JSON
    -h, --help  Show this message and exit.
  '''
# ---
# name: TestErrorOutput.test_invalid_command_error_output
  '''
  Traceback (most recent call last):
    File "<PATH>", line 10, in <module>
      sys.exit(main())
               <HOME><HOME><HOME><HOME>^^
    File "<PATH>", line 420, in main
      cli()
      <HOME><HOME><HOME>^^
    File "<PATH>
  y", line 1485, in __call__
      return self.main(*args, **kwargs)
             <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^^^^^^^^^^^^^
    File "<PATH>
  y", line 1406, in main
      rv = self.invoke(ctx)
    File "<PATH>", line 106, in invok
  e
      _handle_query_mode(ctx)
      <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^
    File "<PATH>", line 154, in _hand
  le_query_mode
      execute_query(env, params_copy)
      <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^^^^^^^^^^^^^^
    File "<PATH>", line 42, in execute_qu
  ery
      asyncio.run(async_execute_query(env, params))
      <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "<PATH>
  13<PATH>", line 195, in run
      return runner.run(main)
             <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^^
    File "<PATH>
  13<PATH>", line 118, in run
      return self._loop.run_until_complete(task)
             <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^^^^^
    File "<PATH>
  13<PATH>", line 725, in run_until_complete
      return future.result()
             <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^
    File "<PATH>", line 140, in async_exe
  cute_query
      results = await filter_chain.list()
                ^^^^^^^^^^^^^^^^^^^^^^^^^
    File "<PATH>", line 584, in list
      candidates = await self._fetch_candidates()
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "<PATH>", line 550, in _fetch_
  candidates
      return await self._fetch_generic(
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
      ...<3 lines>...
      )
      ^
    File "<PATH>", line 546, in _fetch_
  generic
      return await list_all(limit=plan.fetch_limit, **plan.sql_params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    File "<PATH>", line 432, in
  list
      conv_records = await self._backend.list_conversations(
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
      ...<17 lines>...
      )
      ^
    File "<PATH>", li
  ne 411, in list_conversations
      async with self._get_connection() as conn:
                 <HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME><HOME>^^
    File "<PATH>
  13<PATH>", line 214, in __aenter__
      return await anext(self.gen)
             ^^^^^^^^^^^^^^^^^^^^^
    File "<PATH>", li
  ne 228, in _get_connection
      await self._ensure_schema_once()
    File "<PATH>", li
  ne 137, in _ensure_schema_once
      await self._ensure_schema(init_conn)
    File "<PATH>", li
  ne 288, in _ensure_schema
      raise DatabaseError(
      ...<2 lines>...
      )
  polylogue.errors.DatabaseError: Database schema version 3 is incompatible with e
  xpected version 4. Delete the database file and re-run polylogue to create a fre
  sh v4 schema.
  '''
# ---
# name: TestHelpOutput.test_help_output_snapshot
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
  
    Polylogue - AI conversation archive.
  
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude --since "last week"
        polylogue --latest --output browser
  
    Combined filters:
        polylogue "error" -p claude --since 2025-01 --list
        polylogue --has thinking --sort tokens --limit 10
        polylogue -t important --stats-by provider
  
    Modifiers (write operations):
        polylogue "urgent" --add-tag review --dry-run
        polylogue -p old --delete --dry-run
  
    Subcommands:
        polylogue run       Parse<PATH> pipeline
        polylogue check     Health check and repair
        polylogue embed     Generate vector embeddings
        polylogue tags      List tags with counts
        polylogue site      Build static HTML archive
        polylogue sources   List configured sources
        polylogue schema    Schema inference and versioning
        polylogue mcp       Start MCP server
        polylogue qa        Snapshot<PATH> QA artifacts
  
    Run `polylogue <command> --help` for subcommand details.
  
  Options:
    -i, --id TEXT                   Conversation ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    -p, --provider TEXT             Include providers (comma = OR)
    --exclude-provider TEXT         Exclude providers
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only conversations with tool use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with thinking blocks (SQL
                                    pushdown)
    --has-file-ops                  Only conversations with file read<PATH>
                                    ops
    --has-git-ops                   Only conversations with git operations
    --has-subagent                  Only conversations that spawned subagents
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -n, --limit INTEGER             Max results
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N conversations
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|html|obsidian|org|yaml|plaintext|csv]
                                    Output format
    --fields TEXT                   Fields for list<PATH>: id, title, provider,
                                    date, messages, words, tags, summary
    --list                          Force list format
    --stats                         Only statistics, no content
    --count                         Print matched count and exit
    --stats-by [provider|month|year|day]
                                    Aggregate statistics by dimension
    --open                          Open result in browser<PATH>
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tools (tool calls),
                                    strip-thinking (reasoning), strip-all (both)
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID. Incompatible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> messages
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --delete                        Delete matched (requires filter)
    --dry-run                       Preview changes without executing
    --force                         Skip confirmation for bulk operations
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  
  Commands:
    auth         Authenticate with external services (Google Drive for...
    check        Health check with optional repair.
    completions  Generate shell completion scripts.
    dashboard    Launch the Mission Control TUI dashboard.
    demo         Generate synthetic conversations for demos, testing, and...
    embed        Generate semantic embeddings for conversations.
    mcp          Start the MCP server for AI assistant integration.
    qa           Snapshot and index QA artifacts to a reproducible archive...
    reset        Reset database, assets, rendered outputs, or auth state.
    run          Run pipeline stages on configured sources.
    schema       Schema inference, versioning, and promotion.
    site         Generate a static HTML site from the archive.
    sources      List configured sources.
    tags         List all tags with conversation counts.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_narrow_width
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
  
    Polylogue - AI conversation archive.
  
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude --since "last week"
        polylogue --latest --output browser
  
    Combined filters:
        polylogue "error" -p claude --since 2025-01 --list
        polylogue --has thinking --sort tokens --limit 10
        polylogue -t important --stats-by provider
  
    Modifiers (write operations):
        polylogue "urgent" --add-tag review --dry-run
        polylogue -p old --delete --dry-run
  
    Subcommands:
        polylogue run       Parse<PATH> pipeline
        polylogue check     Health check and repair
        polylogue embed     Generate vector embeddings
        polylogue tags      List tags with counts
        polylogue site      Build static HTML archive
        polylogue sources   List configured sources
        polylogue schema    Schema inference and versioning
        polylogue mcp       Start MCP server
        polylogue qa        Snapshot<PATH> QA artifacts
  
    Run `polylogue <command> --help` for subcommand details.
  
  Options:
    -i, --id TEXT                   Conversation ID (exact or
  prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND
  )
    --exclude-text TEXT             Exclude FTS term
    -p, --provider TEXT             Include providers (comma =
   OR)
    --exclude-provider TEXT         Exclude providers
    -t, --tag TEXT                  Include tags (comma = OR,
  supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --has TEXT                      Filter by content: thinkin
  g (reasoning),
                                    tools (calls), summary, at
  tachments
    --has-tool-use                  Only conversations with to
  ol use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with th
  inking blocks (SQL
                                    pushdown)
    --has-file-ops                  Only conversations with fi
  le read<PATH>
                                    ops
    --has-git-ops                   Only conversations with gi
  t operations
    --has-subagent                  Only conversations that sp
  awned subagents
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since TEXT                    After date (ISO, 'yesterda
  y', 'last week')
    --until TEXT                    Before date
    -n, --limit INTEGER             Max results
    --latest                        Most recent (= --sort date
   --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N convers
  ations
    -o, --output TEXT               Output destinations: brows
  er, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|html|obsidian|org|yaml|plainte
  xt|csv]
                                    Output format
    --fields TEXT                   Fields for list<PATH>: id,
  title, provider,
                                    date, messages, words, tag
  s, summary
    --list                          Force list format
    --stats                         Only statistics, no conten
  t
    --count                         Print matched count and ex
  it
    --stats-by [provider|month|year|day]
                                    Aggregate statistics by di
  mension
    --open                          Open result in browser<PATH>
  tor
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tool
  s (tool calls),
                                    strip-thinking (reasoning)
  , strip-all (both)
    --stream                        Stream output (low memory)
  . Requires
                                    --latest or -i ID. Incompa
  tible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> m
  essages
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --delete                        Delete matched (requires f
  ilter)
    --dry-run                       Preview changes without ex
  ecuting
    --force                         Skip confirmation for bulk
   operations
    --plain                         Force non-interactive plai
  n output
    -v, --verbose                   Verbose output
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit
  .
  
  Commands:
    auth         Authenticate with external services (Google D
  rive for...
    check        Health check with optional repair.
    completions  Generate shell completion scripts.
    dashboard    Launch the Mission Control TUI dashboard.
    demo         Generate synthetic conversations for demos, t
  esting, and...
    embed        Generate semantic embeddings for conversation
  s.
    mcp          Start the MCP server for AI assistant integra
  tion.
    qa           Snapshot and index QA artifacts to a reproduc
  ible archive...
    reset        Reset database, assets, rendered outputs, or
  auth state.
    run          Run pipeline stages on configured sources.
    schema       Schema inference, versioning, and promotion.
    site         Generate a static HTML site from the archive.
    sources      List configured sources.
    tags         List all tags with conversation counts.
  '''
# ---
# name: TestTerminalDimensions.test_help_at_wide_width
  '''
  Usage: polylogue [OPTIONS] COMMAND [ARGS]...
  
    Polylogue - AI conversation archive.
  
    Query mode (default):
        polylogue "search terms"
        polylogue -p claude --since "last week"
        polylogue --latest --output browser
  
    Combined filters:
        polylogue "error" -p claude --since 2025-01 --list
        polylogue --has thinking --sort tokens --limit 10
        polylogue -t important --stats-by provider
  
    Modifiers (write operations):
        polylogue "urgent" --add-tag review --dry-run
        polylogue -p old --delete --dry-run
  
    Subcommands:
        polylogue run       Parse<PATH> pipeline
        polylogue check     Health check and repair
        polylogue embed     Generate vector embeddings
        polylogue tags      List tags with counts
        polylogue site      Build static HTML archive
        polylogue sources   List configured sources
        polylogue schema    Schema inference and versioning
        polylogue mcp       Start MCP server
        polylogue qa        Snapshot<PATH> QA artifacts
  
    Run `polylogue <command> --help` for subcommand details.
  
  Options:
    -i, --id TEXT                   Conversation ID (exact or prefix match)
    -c, --contains TEXT             FTS term (repeatable = AND)
    --exclude-text TEXT             Exclude FTS term
    -p, --provider TEXT             Include providers (comma = OR)
    --exclude-provider TEXT         Exclude providers
    -t, --tag TEXT                  Include tags (comma = OR, supports
                                    key:value)
    --exclude-tag TEXT              Exclude tags
    --title TEXT                    Title contains
    --has TEXT                      Filter by content: thinking (reasoning),
                                    tools (calls), summary, attachments
    --has-tool-use                  Only conversations with tool use (SQL
                                    pushdown)
    --has-thinking                  Only conversations with thinking blocks (SQL
                                    pushdown)
    --has-file-ops                  Only conversations with file read<PATH>
                                    ops
    --has-git-ops                   Only conversations with git operations
    --has-subagent                  Only conversations that spawned subagents
    --min-messages INTEGER          Minimum message count
    --max-messages INTEGER          Maximum message count
    --min-words INTEGER             Minimum total word count
    --since TEXT                    After date (ISO, 'yesterday', 'last week')
    --until TEXT                    Before date
    -n, --limit INTEGER             Max results
    --latest                        Most recent (= --sort date --limit 1)
    --sort [date|tokens|messages|words|longest|random]
                                    Sort by field
    --reverse                       Reverse sort order
    --sample INTEGER                Random sample of N conversations
    -o, --output TEXT               Output destinations: browser, clipboard,
                                    stdout (comma-separated)
    -f, --format [markdown|json|html|obsidian|org|yaml|plaintext|csv]
                                    Output format
    --fields TEXT                   Fields for list<PATH>: id, title, provider,
                                    date, messages, words, tags, summary
    --list                          Force list format
    --stats                         Only statistics, no content
    --count                         Print matched count and exit
    --stats-by [provider|month|year|day]
                                    Aggregate statistics by dimension
    --open                          Open result in browser<PATH>
    --transform [strip-tools|strip-thinking|strip-all]
                                    Remove content: strip-tools (tool calls),
                                    strip-thinking (reasoning), strip-all (both)
    --stream                        Stream output (low memory). Requires
                                    --latest or -i ID. Incompatible with
                                    --transform
    -d, --dialogue-only             Show only user<PATH> messages
    --set TEXT...                   Set metadata key value
    --add-tag TEXT                  Add tags (comma-separated)
    --delete                        Delete matched (requires filter)
    --dry-run                       Preview changes without executing
    --force                         Skip confirmation for bulk operations
    --plain                         Force non-interactive plain output
    -v, --verbose                   Verbose output
    --version                       Show the version and exit.
    -h, --help                      Show this message and exit.
  
  Commands:
    auth         Authenticate with external services (Google Drive for...
    check        Health check with optional repair.
    completions  Generate shell completion scripts.
    dashboard    Launch the Mission Control TUI dashboard.
    demo         Generate synthetic conversations for demos, testing, and...
    embed        Generate semantic embeddings for conversations.
    mcp          Start the MCP server for AI assistant integration.
    qa           Snapshot and index QA artifacts to a reproducible archive...
    reset        Reset database, assets, rendered outputs, or auth state.
    run          Run pipeline stages on configured sources.
    schema       Schema inference, versioning, and promotion.
    site         Generate a static HTML site from the archive.
    sources      List configured sources.
    tags         List all tags with conversation counts.
  '''
# ---
